# SudokoSolver

./: CMakeLists.txt  README  main.cc
config/: SudokuSolverConfig.h.in
example/: sudoku_e1.txt  sudoku_e2.txt  sudoku_h1.txt  sudoku_h2.txt  sudoku_h3.txt  sudoku_h4.txt  sudoku_h5.txt  sudoku_h6.txt  sudoku_h7.txt  sudoku_h8.txt  sudoku_m1.txt  sudoku_m2.txt
include/: base.h  parse.h  solve.h
src/: base.cc  parse.cc  solve.cc
